# libexadrums-tests

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  instrument.xml  prep-dummy-soundcard.sh  tests.cpp
helpers/: Operation.cpp  Operation.h  Visitor.cpp  Visitor.h
